디자인 수정

--- a/Pinterest/templates/base.html
+++ b/Pinterest/templates/base.html
@@ -16,7 +16,7 @@
   <header>
     {% include "partials/nav.html" %}
   </header>
-  <body class="w-screen">
+  <body class="max-w-full">
         {% block content %}{% endblock %}
 
         {% include "partials/footer.html" %}
