--- a/Pinterest/templates/accounts/login.html
+++ b/Pinterest/templates/accounts/login.html
@@ -5,14 +5,14 @@
 {% endblock page_title %}
 
 {% block content %}
-    <section class="flex justify-center items-center h-screen w-screen bg-gray-800">
+    <section class="flex justify-center items-center h-screen bg-gray-800">
         <div class="max-w-md w-full justify-center items-center bg-gray-900 rounded p-6 space-y-4">
             <div class="mb-4">
                 <p class="text-gray-400">Sign In</p>
                 <h2 class="text-xl font-bold text-white">Join our community</h2>
             </div>
                     {% include 'partials/social_login.html' %}
-                <form method="POST" action="{% url "accounts:login" %}" class="space-y-4 ">
+            <form method="POST" action="{% url "accounts:login" %}" class="space-y-4 ">
                     {% csrf_token %}
                 <div>
                     <input class="w-full p-4 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600" type="email" placeholder="Email">
