--- a/Pinterest/templates/partials/nav.html
+++ b/Pinterest/templates/partials/nav.html
@@ -1,7 +1,7 @@
 <!-- follow me on twitter @asad_codes -->
 
 
-<nav class="flex justify-center items-center bg-gray-900 text-white w-screen">
+<nav class="flex justify-center items-center bg-gray-900 text-white">
         <div class="px-5 xl:px-12 py-6 flex w-full items-center">
           <a class="text-3xl font-bold font-heading" href="#">
             <!-- <img class="h-9" src="logo.png" alt="logo"> -->
