--- a/Pinterest/templates/accounts/login.html
+++ b/Pinterest/templates/accounts/login.html
@@ -6,8 +6,9 @@
 
 {% block content %}
 <form method="POST" action="{% url "accounts:login" %}" >
-    {{forms.as_p}}
-    <button>login</button>
+    {% csrf_token %}
+    {{form.as_p}}
+    <button>Login</button>
 </form>
 
     <section class="flex justify-center items-center h-screen bg-gray-800">
