--- a/Pinterest/templates/partials/nav.html
+++ b/Pinterest/templates/partials/nav.html
@@ -49,6 +49,7 @@
         <a href="{% url "accounts:logout" %}">log out</a>
       {% else %}
         <a href="{% url "accounts:login" %}">log in</a>
+        <a href="{% url "accounts:signup" %}">signup</a>
       {% endif %}
 
       
