--- a/Pinterest/templates/accounts/signup.html
+++ b/Pinterest/templates/accounts/signup.html
@@ -5,10 +5,37 @@
 {% endblock page_title %}
 
 {% block content %}
-<form method="POST" action="{% url "accounts:signup" %}" >
-    {% csrf_token %}
-    {{form.as_p}}
-    <button>signup</button>
-</form>
+
+<section class="flex justify-center items-center h-screen bg-gray-800">
+    <div class="max-w-md w-full justify-center items-center bg-gray-900 rounded p-6 space-y-4">
+        <div class="mb-4">
+            <p class="text-gray-400">Sign up</p>
+            <h2 class="text-xl font-bold text-white">Sign up our community</h2>
+        </div>
+                {% include 'partials/social_login.html' %}
+        <form method="POST" action="{% url "accounts:signup" %}" class="space-y-4 ">
+                {% csrf_token %}
+            <div>
+                <input class="w-full p-4 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600" name="first_name" placeholder="First Name">
+            </div>
+            <div>
+                    <input class="w-full p-4 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600" name="last_name" placeholder="Last Name">
+            </div>    
+            <div>
+                <input class="w-full p-4 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600" name="email" type="email" placeholder="Email">
+            </div>
+            <div>
+                <input class="w-full p-4 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600" name="password" type="password" placeholder="Password">
+            </div>
+            <div>
+                <input class="w-full p-4 text-sm bg-gray-50 focus:outline-none border border-gray-200 rounded text-gray-600" name="confirm_password" type="password" placeholder="Confirm Password">
+            </div>
+
+            <div>
+                <button class="w-full py-4 bg-blue-600 hover:bg-blue-700 rounded text-sm font-bold text-gray-50 transition duration-200">sign up</button>
+            </div>
+        </form>
+    </div>
+</section>
 
 {% endblock content %}
