--- a/Pinterest/templates/partials/nav.html
+++ b/Pinterest/templates/partials/nav.html
@@ -3,9 +3,9 @@
 
 <nav class="flex justify-center items-center bg-gray-900 text-white">
         <div class="px-5 xl:px-12 py-6 flex w-full items-center">
-          <a class="text-3xl font-bold font-heading" href="#">
+          <a class="text-6xl font-bold font-heading" style="font-family: 'Amatic SC', cursive;"  href="{% url 'core:CoreHomeView' %}">
             <!-- <img class="h-9" src="logo.png" alt="logo"> -->
-            Logo Here.
+            atelier
           </a>
           <!-- Nav Links -->
           <ul class="justify-center items-center hidden md:flex px-4 mx-auto font-semibold font-heading space-x-12">
