--- a/Pinterest/templates/base.html
+++ b/Pinterest/templates/base.html
@@ -10,7 +10,7 @@
     {% include "partials/nav.html" %}
   </header>
 
-  <body class="max-w-full">
+  <body class="max-w-full bg-gray-800">
     
         {% block content %}{% endblock %}
 
